--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="src" path="log"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/util"/>
+	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/dylan_util"/>
 	<classpathentry exported="true" kind="lib" path="lib/collections-generic-4.01.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/colt-1.2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/concurrent-1.3.4.jar"/>
