--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry exported="true" kind="lib" path="lib/concurrent-1.3.4.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jung-2.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/guava-13.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/ptsupport.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/Julian/Documents/Ptolemy/ptolemy/ptsupport.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
