--- a/.classpath
+++ b/.classpath
@@ -2,8 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src/java"/>
 	<classpathentry kind="src" path="log"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/dylan_util"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="dist/jar/ds.jar"/>
-	<classpathentry kind="lib" path="dist/jar/log4j-1.2.16.jar"/>
 	<classpathentry kind="lib" path="dist/jar/stanford-parser-2010-08-20.jar"/>
 	<classpathentry kind="lib" path="lib/collections-generic-4.01.jar"/>
 	<classpathentry kind="lib" path="lib/colt-1.2.0.jar"/>
@@ -11,7 +16,41 @@
 	<classpathentry kind="lib" path="lib/guava-13.0.1.jar"/>
 	<classpathentry kind="lib" path="lib/jung-2.0.jar"/>
 	<classpathentry kind="lib" path="lib/ptsupport.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/dylan_util"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/collection-0.7.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/commons-cli-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/commons-codec-1.15.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/commons-compress-1.20.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/commons-csv-1.8.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/commons-io-2.8.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/commons-lang3-3.12.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/httpclient-4.5.13.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/httpclient-cache-4.5.13.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/httpcore-4.4.13.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jackson-annotations-2.12.3.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jackson-core-2.12.3.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jackson-databind-2.12.3.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/javax.annotation-api-1.3.2.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jcl-over-slf4j-1.7.30.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-arq-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-base-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-cmds-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-core-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-dboe-base-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-dboe-index-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-dboe-storage-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-dboe-transaction-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-dboe-trans-data-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-iri-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-rdfconnection-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-shacl-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-shaded-guava-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-tdb2-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jena-tdb-4.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/jsonld-java-0.13.3.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/libthrift-0.14.1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/slf4j-api-1.7.30.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/log4j-api-2.14.1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/log4j-core-2.14.1.jar"/>
+	<classpathentry kind="lib" path="lib/jena-4.1.0/log4j-slf4j-impl-2.14.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
